finish positioning footer and make links function

--- a/resources/style.css
+++ b/resources/style.css
@@ -94,13 +94,6 @@ body {
   padding: 10px;
 }
 /*end locations styling*/
-
-
-/*footer styling*/
-.footer {
-  margin: 20px;
-}
-#copyright {
+h5 {
   text-align: left;
-  display: block;
 }
